Added map elites

--- a/gp.ipynb
+++ b/gp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,32 +71,32 @@
       "   \t      \t                                 fitness                                 \t                      size                     \n",
       "   \t      \t-------------------------------------------------------------------------\t-----------------------------------------------\n",
       "gen\tnevals\tavg     \tgen\tmax     \tmin     \tnevals\tstd      \tavg    \tgen\tmax\tmin\tnevals\tstd    \n",
-      "0  \t1024  \t0.245142\t0  \t0.306941\t0.173547\t1024  \t0.0301487\t22.3145\t0  \t63 \t4  \t1024  \t12.8076\n",
-      "1  \t821   \t0.20355 \t1  \t0.253415\t0.173547\t821   \t0.0157159\t21.7676\t1  \t61 \t2  \t821   \t12.1611\n",
-      "2  \t834   \t0.184907\t2  \t0.208535\t0.173051\t834   \t0.00676349\t20.6328\t2  \t61 \t2  \t834   \t12.3812\n",
-      "3  \t827   \t0.177169\t3  \t0.189417\t0.172503\t827   \t0.00348525\t17.2129\t3  \t61 \t2  \t827   \t7.89071\n",
-      "4  \t838   \t0.173676\t4  \t0.180078\t0.17207 \t838   \t0.000920015\t17.7207\t4  \t41 \t6  \t838   \t6.19287\n",
-      "5  \t797   \t0.173089\t5  \t0.173996\t0.17207 \t797   \t0.000419875\t22.8418\t5  \t38 \t6  \t797   \t6.26517\n",
-      "6  \t815   \t0.172533\t6  \t0.173547\t0.17207 \t815   \t0.000318498\t24.9668\t6  \t41 \t14 \t815   \t4.30103\n",
-      "7  \t817   \t0.17218 \t7  \t0.172776\t0.172038\t817   \t0.000178897\t19.5811\t7  \t37 \t9  \t817   \t4.57589\n",
-      "8  \t820   \t0.17207 \t8  \t0.172394\t0.172038\t820   \t1.63176e-05\t17.1064\t8  \t29 \t9  \t820   \t2.06945\n",
-      "9  \t822   \t0.172067\t9  \t0.17207 \t0.172038\t822   \t9.31262e-06\t18.1348\t9  \t29 \t9  \t822   \t3.75409\n",
-      "10 \t809   \t0.172047\t10 \t0.17207 \t0.170197\t809   \t0.000130547\t22.0234\t10 \t29 \t9  \t809   \t5.92181\n",
-      "11 \t821   \t0.171988\t11 \t0.17207 \t0.170197\t821   \t0.000293407\t28.0859\t11 \t33 \t15 \t821   \t2.61987\n",
-      "12 \t796   \t0.171695\t12 \t0.172038\t0.169571\t796   \t0.00070222 \t28.707 \t12 \t53 \t25 \t796   \t1.30807\n",
-      "13 \t820   \t0.170771\t13 \t0.172038\t0.169571\t820   \t0.000865169\t28.8994\t13 \t56 \t25 \t820   \t2.1787 \n",
-      "14 \t804   \t0.170043\t14 \t0.172038\t0.169571\t804   \t0.00031654 \t28.8916\t14 \t56 \t21 \t804   \t1.08657\n",
-      "15 \t801   \t0.169691\t15 \t0.170197\t0.169571\t801   \t0.000240114\t28.8984\t15 \t33 \t21 \t801   \t0.813363\n",
-      "16 \t821   \t0.16957 \t16 \t0.169571\t0.169246\t821   \t1.75698e-05\t28.9883\t16 \t33 \t25 \t821   \t0.279263\n",
-      "17 \t825   \t0.169567\t17 \t0.169571\t0.169246\t825   \t3.6395e-05 \t28.9609\t17 \t33 \t25 \t825   \t0.431247\n",
-      "18 \t808   \t0.16955 \t18 \t0.169571\t0.169246\t808   \t8.03873e-05\t28.9531\t18 \t29 \t25 \t808   \t0.430468\n",
-      "19 \t808   \t0.169465\t19 \t0.169571\t0.169246\t808   \t0.000152402\t28.9414\t19 \t29 \t25 \t808   \t0.480564\n",
-      "20 \t841   \t0.169286\t20 \t0.169571\t0.169246\t841   \t0.000106789\t28.9766\t20 \t33 \t25 \t841   \t0.432378\n",
-      "21 \t803   \t0.169246\t21 \t0.169246\t0.169246\t803   \t0          \t28.9883\t21 \t33 \t25 \t803   \t0.374817\n",
-      "22 \t845   \t0.169246\t22 \t0.169246\t0.169246\t845   \t0          \t29.0039\t22 \t33 \t25 \t845   \t0.515373\n",
-      "23 \t809   \t0.169246\t23 \t0.169246\t0.169246\t809   \t0          \t29.0117\t23 \t33 \t25 \t809   \t0.279263\n",
-      "24 \t837   \t0.169246\t24 \t0.169246\t0.169246\t837   \t0          \t29.0195\t24 \t33 \t25 \t837   \t0.330142\n",
-      "25 \t816   \t0.169246\t25 \t0.169246\t0.169246\t816   \t0          \t29.0117\t25 \t33 \t25 \t816   \t0.330511\n"
+      "0  \t1024  \t0.243311\t0  \t0.306841\t0.176631\t1024  \t0.0296102\t23.3184\t0  \t63 \t4  \t1024  \t13.4102\n",
+      "1  \t775   \t0.205137\t1  \t0.251931\t0.176631\t775   \t0.013728 \t21.4658\t1  \t62 \t3  \t775   \t12.4066\n",
+      "2  \t817   \t0.188245\t2  \t0.216094\t0.176631\t817   \t0.00613293\t19.8242\t2  \t62 \t2  \t817   \t12.8652\n",
+      "3  \t822   \t0.181621\t3  \t0.19083 \t0.175296\t822   \t0.00220317\t18.7646\t3  \t59 \t2  \t822   \t14.0695\n",
+      "4  \t826   \t0.179137\t4  \t0.184227\t0.174102\t826   \t0.00167435\t17.709 \t4  \t57 \t3  \t826   \t9.73924\n",
+      "5  \t829   \t0.176728\t5  \t0.180392\t0.173547\t829   \t0.00137555\t14.5391\t5  \t57 \t5  \t829   \t9.88244\n",
+      "6  \t822   \t0.174902\t6  \t0.177571\t0.169682\t822   \t0.000962185\t16.6992\t6  \t42 \t5  \t822   \t6.22898\n",
+      "7  \t808   \t0.173825\t7  \t0.175296\t0.169682\t808   \t0.000690274\t19.4688\t7  \t39 \t7  \t808   \t5.10773\n",
+      "8  \t831   \t0.172916\t8  \t0.174226\t0.169682\t831   \t0.000991894\t20.0312\t8  \t46 \t7  \t831   \t6.20035\n",
+      "9  \t813   \t0.171626\t9  \t0.173547\t0.169682\t813   \t0.00117892 \t17.7588\t9  \t46 \t9  \t813   \t6.75357\n",
+      "10 \t797   \t0.170244\t10 \t0.172533\t0.169682\t797   \t0.000894223\t12.457 \t10 \t31 \t9  \t797   \t5.83448\n",
+      "11 \t803   \t0.169696\t11 \t0.171868\t0.169682\t803   \t0.000143223\t9.50195\t11 \t31 \t9  \t803   \t1.89159\n",
+      "12 \t818   \t0.169685\t12 \t0.173089\t0.169682\t818   \t0.000106433\t9.45215\t12 \t21 \t7  \t818   \t1.62129\n",
+      "13 \t786   \t0.169685\t13 \t0.172997\t0.169682\t786   \t0.000103547\t9.5332 \t13 \t21 \t9  \t786   \t1.77462\n",
+      "14 \t829   \t0.169682\t14 \t0.169682\t0.169682\t829   \t5.55112e-17\t9.62012\t14 \t21 \t9  \t829   \t1.96831\n",
+      "15 \t849   \t0.169682\t15 \t0.169682\t0.169682\t849   \t5.55112e-17\t9.77539\t15 \t28 \t9  \t849   \t2.18981\n",
+      "16 \t806   \t0.169684\t16 \t0.171995\t0.169682\t806   \t7.22481e-05\t10.0098\t16 \t32 \t9  \t806   \t2.56324\n",
+      "17 \t815   \t0.169682\t17 \t0.169682\t0.169682\t815   \t5.55112e-17\t9.85156\t17 \t25 \t9  \t815   \t2.30731\n",
+      "18 \t823   \t0.169682\t18 \t0.169682\t0.169505\t823   \t7.79502e-06\t10.0605\t18 \t29 \t9  \t823   \t2.80141\n",
+      "19 \t848   \t0.169679\t19 \t0.169682\t0.168904\t848   \t3.07956e-05\t10.4639\t19 \t29 \t9  \t848   \t3.39471\n",
+      "20 \t812   \t0.169668\t20 \t0.169682\t0.168904\t812   \t6.41442e-05\t11.4033\t20 \t34 \t9  \t812   \t4.72985\n",
+      "21 \t830   \t0.169612\t21 \t0.169682\t0.168904\t830   \t0.00012138 \t15.5117\t21 \t29 \t9  \t830   \t7.24109\n",
+      "22 \t831   \t0.169481\t22 \t0.169682\t0.168904\t831   \t0.000172993\t22.7598\t22 \t29 \t9  \t831   \t4.97424\n",
+      "23 \t816   \t0.169326\t23 \t0.169585\t0.168904\t816   \t0.000274847\t22.3164\t23 \t26 \t16 \t816   \t4.11522\n",
+      "24 \t824   \t0.169016\t24 \t0.169505\t0.168904\t824   \t0.000233203\t17.7549\t24 \t32 \t16 \t824   \t3.63569\n",
+      "25 \t813   \t0.168904\t25 \t0.169463\t0.168904\t813   \t1.74662e-05\t16.1299\t25 \t32 \t16 \t813   \t1.35487\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "file=open('./evolved_funcs/best_funcs3','wb')\n",
-    "hof=pickle.dump(hof,file)\n",
+    "pickle.dump(hof,file)\n",
     "file.close()\n"
    ]
   },
@@ -201,35 +201,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Function  add(add(LS, LF), min(div(add(LS, LF), sub(div(neg(LF), mul(MaxRReq, TSC)), min(mul(MaxRReq, EF), mul(LS, LS)))), neg(AvgRReq)))\n",
-      "./j30/j309_3.sm (0.5625, 75) 18.329691274224558                                                      17.960909597368662                                                                            (0.0, 51) 18.730802475244825                    (0.42857142857142855, 90) 18.87455900754932                    (0.4745762711864407, 87) 18.645798822900634                   (0.11363636363636363, 49) 18.099467013749095                   (0.19047619047619047, 50) 18.242424438484242                    (0.0, 52) 17.92038213186094                   18.381022521557014                    (0.015625, 65) 18.47931989963749                   18.59457694502528                    (0.1346153846153846, 59) 18.088527879264923                                                          (0.15555555555555556, 52) 18.127930953293095                   \n",
-      "384 j30 files read\n",
-      "j30 18.329691274224558 23710\n",
-      "./j60/j6020_4.sm (0.0, 86) 17.12456076720539                                      , 79) 19.120762711864405                   20.60935365590695                    (0.140625, 73) 18.250634673565198                                      17.003311433581437                    (0.028985507246376812, 71) 16.623441166051652                   16.311087198638088                                      15.548993483726795                    (0.0, 76) 15.692507034461316                    (0.12643678160919541, 98) 15.942552203579133                   16.087916798717853                   \n",
-      "384 j60 files read\n",
-      "j60 17.12456076720539 32367\n",
-      "./j90/j9042_5.sm (0.06666666666666667, 112) 15.550412474866057                                                                          15.36451622759811                                                         17.890263121497995                                      \r"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-1441d26543d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mtest_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'j30'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'j60'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'j90'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'j120'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtyp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_type\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mtotal_dev_percent\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmakespan\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstatistics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate_custom_rule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtoolbox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhof\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhof_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minst_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtyp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'parallel'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moption\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'forward'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtyp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtotal_dev_percent\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmakespan\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mlog_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'results_log.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'a+'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/Projects/GP/parallelgeneticprogramming_scheduling/statistics.py\u001b[0m in \u001b[0;36mevaluate_custom_rule\u001b[0;34m(train_set, instance, priority_func, inst_type, mode, option, use_precomputed)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mall_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_set\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"skipped\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/Projects/GP/parallelgeneticprogramming_scheduling/instance.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, filepath, use_precomputed)\u001b[0m\n\u001b[1;32m     69\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 71\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG_T\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     72\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Path not provided\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/networkx/classes/digraph.py\u001b[0m in \u001b[0;36madd_edge\u001b[0;34m(self, u_of_edge, v_of_edge, **attr)\u001b[0m\n\u001b[1;32m    638\u001b[0m         \u001b[0mdatadict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_adj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge_attr_dict_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    639\u001b[0m         \u001b[0mdatadict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 640\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_succ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatadict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    641\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatadict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    642\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Function  add(mul(sub(LF, MaxRReq), add(LF, TSC)), max(LS, neg(add(LS, sub(ES, EF)))))\n",
+      "./j30/j309_9.sm (0.9459459459459459, 72) 18.638414821556573                                                              18.4217462387142                     (0.8085106382978723, 85) 18.02250123286325                     (0.11428571428571428, 39) 18.37913339518374                    \n",
+      "336 j30 files read\n",
+      "j30 18.638414821556573 20743\n",
+      "./j60/j609_9.sm (0.3875, 111) 17.445570547041534                                   14.00198929770458                     (0.13580246913580246, 92) 18.35297901009657                                         (0.0, 70) 17.520960748345                     (0.803921568627451, 92) 17.350401604598193                    \n",
+      "336 j60 files read\n",
+      "j60 17.445570547041534 28305\n",
+      "./j90/j909_9.sm (0.8, 135) 15.463648291450633                                        14.435373815345086                     (0.6883116883116883, 130) 15.574830625908378                    \n",
+      "480 j90 files read\n",
+      "j90 15.574830625908378 48101\n",
+      "./j120/j1209_9.sm (0.12643678160919541, 98) 43.50386920404016                        \n",
+      "600 j120 files read\n",
+      "j120 43.50386920404016 81464\n",
+      "Aggregate %  26.085878599719795\n"
      ]
     }
    ],
